CHANGES
=======

HEAD
------------------
- possibly fixed ECT channel hang
- added 'x' option to capicommand(ect) to have real 'explicit call transfer'
  (needed by some ISDN lines)
- support CCBS (call completion on busy subscriber)


chan_capi-1.0.1
------------------
- added qsig caller-name patch by Mario Goegel
- recognise asterisk 1.4.1
- register at CAPI with needed maxLogicalConnections only
- don't send SELECT_B_PROTOCOL more than once
- don't send more DATA_B3 messages than allowed by CAPI_MAX_B3_BLOCKS
- added 'k' option to capi receivefax command for not deleting bad faxes
- added b-channel number to channel name for better identification
- added variable setting REDIRECTIONNUMBER on outgoing call
- fixed deadlock with ast_async_goto on fax tone detection
- listen to CAPI supplementary information
QSIG:
 - added support for different qsig variants
 - added support for rerouting informations on incoming calls
 - added implementation of Simple Call Transfer

chan_capi-1.0.0
------------------
- Added preliminary handling of MANUFACTURER_IND.
- Check for fax connection when in receivefax mode before writing data
  to file.
- Try to detect for generic jitter buffer patch
- Adapted to new Asterisk version 1.4 (Bug PR#20)
- Adapted to new ast_channel_alloc from asterisk trunk.
- Make capicommand(echocancel) setting non-permanent.
  Setting is restored after hangup.
- Better check for asterisk version 1.4 BUG#23
- Added information and changed example for tx/rx gains.
- Read the channel frames during wait for fax finish.
- Added progress when in faxmode to wakeup asterisk-1.2.
  (needed for e.g. auto-hangup on timeout)
- Don't error on invalid controller in capi.conf, just ignore it.
- Added 3PTY patch by Simon Peter.
- Allow echo-cancel even with old capi configuration bit for
  echo-cancel.
- Fix compiler warnings.
- Fixed callerid on incoming call with Asterisk 1.4 (PR#25)
- Remove possible race condition in with hangup and DISCONNECT_IND.